Fixing skip partner choice voting in round zero. Setting location outcome display for the first story in round zero -- wasn't firing before